Add a static "enable javascript" page
Add handler to root context and refactor common code to WebUtil.renderTemplate.